--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "mern-boilerplate",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "description": "A full stack application boilerplate using MERN stack with redux and jwt for authentication",
   "main": "server",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon backend/server",
-    "frontent":"npm start --prefix frontent",
-    "dev":"concurrently \"npm run server\" \"npm run frontent\"",
-    "import":"",
-    "destroy":""
+    "server": "nodemon backend/server",
+    "frontent": "npm start --prefix frontent",
+    "dev": "concurrently \"npm run server\" \"npm run frontent\"",
+    "import": "",
+    "destroy": ""
   },
   "repository": {
     "type": "git",
@@ -39,6 +39,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
+    "multer": "^1.4.3",
     "nodemailer": "^6.7.1",
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.15"
