--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "server": "nodemon backend/server",
     "frontent": "npm start --prefix frontent",
     "dev": "concurrently \"npm run server\" \"npm run frontent\"",
-    "import": "",
-    "destroy": ""
+    "import": "node backend/seeder",
+    "destroy": "npm backend/seeder -d"
   },
   "repository": {
     "type": "git",
@@ -42,6 +42,7 @@
     "multer": "^1.4.3",
     "nodemailer": "^6.7.1",
     "nodemailer-express-handlebars": "^4.0.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "uuid": "^8.3.2"
   }
 }
