--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon backend/server",
-    "frontent": "npm start --prefix frontent",
-    "dev": "concurrently \"npm run server\" \"npm run frontent\"",
+    "frontend": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run frontend\"",
     "import": "node backend/seeder",
-    "destroy": "npm backend/seeder -d"
+    "destroy": "node backend/seeder -d"
   },
   "repository": {
     "type": "git",
