--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "frontend": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
     "import": "node backend/seeder",
-    "destroy": "node backend/seeder -d"
+    "destroy": "node backend/seeder -d",
+    "build":"npm run build --prefix frontend"
   },
   "repository": {
     "type": "git",
