--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "frontend": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
     "import": "node backend/seeder",
+    "api": "node backend/seeder -api",
     "destroy": "node backend/seeder -d"
   },
   "repository": {
